# Rocky

./: .README.md.swp  CMakeLists.txt  LICENSE  Makefile  README.md  glad.c  imgui.ini  main.cpp  my_test  opengl-app  shader.cpp  test.cpp
include/: shader.h  shader_s.h  test.h
include/glad/: glad.h
lib/: shader_s.h
lib/shaders/: shader.frag  shader.vert
src/: glad.c  main.cpp
